--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "json-data.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "knex": "^2.3.0"
+    "knex": "^2.3.0",
+    "pg": "^8.8.0"
   }
 }
